--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/RomanKyklin/code-migrations#readme",
   "dependencies": {
+    "@babel/core": "^7.20.12",
     "@babel/generator": "^7.20.14",
     "@babel/parser": "^7.20.15",
     "@types/yargs": "^17.0.22",
