--- a/package.json
+++ b/package.json
@@ -21,14 +21,21 @@
     "@babel/core": "^7.20.12",
     "@babel/generator": "^7.20.14",
     "@babel/parser": "^7.20.15",
+    "@types/babel-types": "^7.0.11",
+    "@types/glob": "^8.0.1",
     "@types/yargs": "^17.0.22",
     "eslint": "^8.33.0",
+    "glob": "^8.1.0",
     "prettier": "^2.8.3",
     "ts-node": "^10.9.1",
     "yargs": "^17.6.2"
   },
   "devDependencies": {
     "@babel/types": "^7.20.7",
+    "@types/babel__core": "^7.20.0",
+    "@types/babel__generator": "^7.6.4",
+    "@types/eslint": "^8.21.0",
+    "@types/prettier": "^2.7.2",
     "typescript": "^4.9.5"
   }
 }
